--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
     </div>
     <div class="input-container">
       <div class="input-item">
-        <input type="text" placeholder="What Do You Wish To Do ..." />
+        <input
+          class="input"
+          type="text"
+          placeholder="What Do You Wish To Do ..."
+        />
         <button class="addBtn" type="submit">+</button>
       </div>
       <div class="input-list">
-        <input type="text" class="item_input" disabled />
-        <button class="editBtn">EDIT</button>
-        <button class="removeBtn">REMOVE</button>
+        <!-- <div class="item">
+          <input type="text" class="item_input" value="Sport" disabled />
+          <button class="editBtn">EDIT</button>
+          <button class="removeBtn">REMOVE</button>
+        </div> -->
       </div>
     </div>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
